2011-01-25  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/search_results.php: added the tab to show search list for
	modules. And cleaned source code style.
	
	* operation/search_modules.php: added the page to list the searched modules.
	
	* operation/search_agents.php: cleaned source code style.

	Pending task: #3141623

2011-01-24  Miguel de Dios  <miguel.dedios@artica.es>

	* include/pChart/pChart.class: fixed in the function "drawTextBox" when
	pass a empty $Text as empty array.

2011-01-24  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/search_agents.php: fixed the pagination in the global search
	result.

2011-01-24  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/pandora.js, operation/agentes/exportdata.php,
	operation/agentes/ver_agente.php,
	godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.elements.php: fixed to show by ajax
	the disabled modules and the disabled agents.
	
	Fixes: #3155701

2011-01-22  Sancho Lerena <slerena@artica.es>

	* pandoradb_data.sql: Updated SQL with version and new embedded "so".

	* include/config_process.php: Version.

	* images/os_icons/embedded.png,
	images/networkmap/14.png: New embedded agent icon.

2011-01-21  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.elements.php: fixed the show
	disabled modules in the list of element tab of the visual console editor.
	
	Fixes: #3155701

2011-01-20  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/status_monitor.php: fixed and optimized the extract the
	list of Module name for the select box in the filter.

2011-01-20  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_generalagente.php: fixed when the agent haven't
	ip address.
	
	Fixes: #3162646

2011-01-20  Miguel de Dios  <miguel.dedios@artica.es>
