@@ -15,6 +15,8 @@
 
 global $config;
 
+require_once ('include/functions_custom_graphs.php');
+
 if (is_ajax ()) {
 	$search_agents = (bool) get_parameter ('search_agents');
 	
@@ -58,6 +60,56 @@ if (! give_acl ($config['id_user'], 0, "IW")) {
 }
 
 $id = (integer) get_parameter('id');
+
+$sql="SELECT * FROM tgraph_source WHERE id_graph = $id_graph";
+$sources = get_db_all_rows_sql($sql);
+
+$sql="SELECT * FROM tgraph WHERE id_graph = $id_graph";
+$graph = get_db_row_sql($sql);
+
+$id_user = $graph["id_user"];
+$private = $graph["private"];
+$width = $graph["width"];
+$height = $graph["height"] + count($sources) * 10;
+
+$zoom = (int) get_parameter ('zoom', 0);
+	//Increase the height to fix the leyend rise
+if ($zoom > 0) {
+	switch ($zoom) {
+	case 1:
+		$width = 500;
+		$height = 200 + count($sources) * 15;
+		break;
+	case 2:
+		$width = 650;
+		$height = 300 + count($sources) * 10;
+		break;
+	case 3:
+		$width = 770;
+		$height = 400 + count($sources) * 5;
+		break;
+	}
+}
+
+// Get different date to search the report.
+$date = (string) get_parameter ('date', date ('Y-m-j'));
+$time = (string) get_parameter ('time', date ('h:iA'));
+$unixdate = strtotime ($date.' '.$time);
+
+$period = (int) get_parameter ('period');
+if (! $period)
+	$period = $graph["period"];
+else 
+	$period = 3600 * $period;
+
+$events = $graph["events"];
+$description = $graph["description"];
+$stacked = (int) get_parameter ('stacked', -1);
+if ($stacked == -1)
+	$stacked = $graph["stacked"];
+
+$name = $graph["name"];
+
 $graphRows = get_db_all_rows_sql("SELECT t1.*,
 	(SELECT t3.nombre 
 		FROM tagente AS t3 
@@ -82,31 +134,97 @@ foreach ($graphRows as $graphRow) {
 	$agent_array[] = $graphRow['agent_name'];
 }
 
-$graphInTgraph = get_db_row_sql("SELECT * FROM tgraph WHERE id_graph = " . $id);
-$stacked = $graphInTgraph['stacked'];
-$events = $graphInTgraph['events'];
-$period = $graphInTgraph['period'];
-
 $modules = implode(',', $module_array);
 $weights = implode(',', $weight_array);
 
-	echo "<table class='databox'>";
-	echo "<tr><td>";
-	
-	$graph_width = get_db_sql ("SELECT width FROM tgraph WHERE id_graph = ".$id);
-	$graph_height= get_db_sql ("SELECT height FROM tgraph WHERE id_graph = ".$id);
-	
-	if(!empty($modules)) {
-		if ($config['flash_charts']) {
-			echo graphic_combined_module (explode (',', $modules), explode (',', $weights), $period, $graph_width, $graph_height,
-					'Combined%20Sample%20Graph', '', $events, 0, 0, $stacked);
-		} else {
-			echo "<img src='include/fgraph.php?tipo=combined&id=$modules&weight_l=$weights&label=" . base64_encode ("Combined%20Sample%20Graph") . "&height=$graph_height&width=$graph_width&stacked=$stacked&period=$period' border=1 alt=''>";
-		}
-	}
-	else {
-		echo "<div class='nf'>".__('Empty graph')."</div>";
-	}
+echo "<table class='databox_frame' cellpadding='0' cellspacing='0'>";
+echo "<tr><td>";
 
-	echo "</td></tr></table>";
+if(!empty($modules)) {
+	if ($config['flash_charts']) {
+		echo graphic_combined_module (explode (',', $modules), explode (',', $weights), $period, $width, $height,
+				'Combined%20Sample%20Graph', '', $events, 0, 0, $stacked, $unixdate);
+	} else {
+		echo "<img src='include/fgraph.php?tipo=combined&id=$modules&weight_l=$weights&label=" . base64_encode ("Combined%20Sample%20Graph") . "&height=$height&width=$width&stacked=$stacked&period=$period&date=$unixdate' border=1 alt=''>";
+	}
+}
+else {
+	echo "<div class='nf'>".__('Empty graph')."</div>";
+}
 
+echo "</td></tr></table>";
+
+echo "<form method = 'POST' action='index.php?sec=greporting&sec2=godmode/reporting/graph_builder&tab=preview&edit_graph=1&id=$id_graph'>";
+echo "<table class='databox_frame' cellpadding='4' cellspacing='4'>";
+echo "<tr>";
+echo "<td>";
+echo "<b>".__('Date')."</b>"." ";
+echo "</td>";
+echo "<td>";
+echo print_input_text ('date', $date, '', 12, 10, true). ' ';
+echo "</td>";
+echo "<td>";
+echo print_input_text ('time', $time, '', 7, 7, true). ' ';
+echo "</td>";
+echo "<td class='datos'>";
+echo "<b>".__('Period')."</b>";
+echo "</td>";
+echo "<td class='datos'>";
+
+print_select (get_custom_graph_periods (), 'period', intval ($period / 3600),
+	'', '', 0, false, false, false);
+
+echo "</td>";
+echo "<td class='datos'>";
+$stackeds = array ();
+$stackeds[0] = __('Graph defined');
+$stackeds[0] = __('Area');
+$stackeds[1] = __('Stacked area');
+$stackeds[2] = __('Line');
+$stackeds[3] = __('Stacked line');
+print_select ($stackeds, 'stacked', $stacked , '', '', -1, false, false);
+
+echo "</td>";
+echo "<td class='datos'>";
+$zooms = array();
+$zooms[0] = __('Graph defined');
+$zooms[1] = __('Zoom x1');
+$zooms[2] = __('Zoom x2');
+$zooms[3] = __('Zoom x3');
+print_select ($zooms, 'zoom', $zoom , '', '', 0);
+
+echo "</td>";
+echo "<td class='datos'>";
+echo "<input type=submit value='".__('Update')."' class='sub upd'>";
+echo "</td>";
+echo "</tr>";
+echo "</table>";
+echo "</form>";
+
+/* We must add javascript here. Otherwise, the date picker won't 
+work if the date is not correct because php is returning. */
+
+require_css_file ('datepicker');
+require_jquery_file ('ui.core');
+require_jquery_file ('ui.datepicker');
+require_jquery_file ('timeentry');
+?>
+<script language="javascript" type="text/javascript">
+
+$(document).ready (function () {
+	$("#loading").slideUp ();
+	$("#text-time").timeEntry ({spinnerImage: 'images/time-entry.png', spinnerSize: [20, 20, 0]});
+	$("#text-date").datepicker ();
+	$.datepicker.regional["<?php echo $config['language']; ?>"];
+});
+</script>
+
+<?php
+$datetime = strtotime ($date.' '.$time);
+$report["datetime"] = $datetime;
+
+if ($datetime === false || $datetime == -1) {
+	echo '<h3 class="error">'.__('Invalid date selected').'</h3>';
+	return;
+}
+?>
